Fix text alignment issues

--- a/static/less/pages/homepage.less
+++ b/static/less/pages/homepage.less
@@ -20,11 +20,11 @@
             margin: 0 15px 0 0;
             padding: 0;
             display: inline-block;
+            text-align: left;
 
             &:last-child {
                 margin: 0;
             }
-
 
             .course {
                 box-shadow: none;
